#6 require.js was added;

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title></title>
 </head>
-<script type="text/javascript" src="js/libs/jquery/dist/jquery.min.js"></script>
+
+    <script data-main="js/main.js" src="js/libs/requirejs/require.js"></script>
 
 <body>
 
